added conditions based on sessions

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,11 @@
         <a href="/">Just Tech News</a>
       </h1>
       <nav>
+        {{#if loggedin}}
         <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
         <a href="/login">login</a>
+        {{/if}}
       </nav>
     </header>
     <main>
@@ -26,8 +29,11 @@
       Thanks for visiting!
     </footer>
   </div>
-
+  
+  {{#if loggedin}}
   <script src="/javascript/logout.js"></script>
+  {{/if}}
+  
 </body>
 
 </html>
