--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -11,6 +11,7 @@
   </div>
 </article>
 
+{{#if loggedin}}
 <form class="comment-form">
   <div>
     <textarea name="comment-body"></textarea>
@@ -21,6 +22,7 @@
     <button type="button" class="upvote-btn">upvote</button>
   </div>
 </form>
+{{/if}}
 
 <div class="comments">
   {{#each post.comments}}
@@ -35,5 +37,7 @@
   {{/each}}
 </div>
 
+{{#if loggedin}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/upvote.js"></script>
+{{/if}}
